fixed extra class tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Animated old logo
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         -->
-        <nav class="large-screen-menu">
+        <nav>
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
