--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Small Screen Header-->
 
-    <header id="top-of-page" class="large-screen-menu">
+    <header id="top-of-page">
       <div class="navigation-top">
         <!--left corner sticky command only logo
         <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
@@ -26,6 +26,7 @@
         <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
         -->
         <nav>
+          <div class="large-screen-menu">
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -33,28 +34,8 @@
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
           </ul>
-        </nav>
-      </div>
-      <div class="bgAnim">
-        <i id="command"></i>
-      </div>
-    </header>
-
-<!-- Small Screen Header-->
-
-    <header id="top-of-page" class="small-screen-menu">
-      <div class="navigation-top">
-        <!--left corner sticky command only logo
-        <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
-        <a href="index.html"><img src="images/logos/e only.svg" alt="Export logo"></a>
-        -->
-        <!--Full logo
-        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
-        -->
-        <!-- Animated old logo
-        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
-        -->
-        <nav>
+          </div>
+          <div class="small-screen-menu">
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -62,12 +43,15 @@
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
           </ul>
+          </div>
         </nav>
       </div>
       <div class="bgAnim">
         <i id="command"></i>
       </div>
     </header>
+
+
 
 
 
