--- a/bios.html
+++ b/bios.html
@@ -20,7 +20,7 @@
         <nav>
           <ul class="menu">
             <li id="not-current-page"><a href="index.html">Home</a></li>
-            <li id="not-current-page"><a href="about.html">About</a></li>
+            <li id="current-page"><a href="about.html">About</a></li>
             <li><a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a></li>
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
@@ -38,14 +38,14 @@
           </div>
 
           <div class="sidebyside">
-            <h1>Professional Facts</h1>
+            <h1 class="no-top-padding bold-h1">Jordan Stewart</h1>
+            <h1 class="no-top-padding">Professional Facts</h1>
             <ul>
               <li>Fact:</li>
               <li>Fact:</li>
               <li>Fact:</li>
             </ul>
-            <h1>Personal Facts</h1>
-              <br>
+            <h1 class="no-top-padding">Personal Facts</h1>
             <ul>
               <li>Fact:</li>
               <li>Fact:</li>
