--- a/bios.html
+++ b/bios.html
@@ -20,7 +20,7 @@
         <nav>
           <ul class="menu">
             <li id="not-current-page"><a href="index.html">Home</a></li>
-            <li id="current-page"><a href="about.html">About</a></li>
+            <li id="not-current-page"><a href="about.html">About</a></li>
             <li><a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a></li>
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
