--- a/location.html
+++ b/location.html
@@ -13,6 +13,7 @@
     <header>
       <div class="navigation-top">
         <nav>
+          <div class="large-screen-menu">
           <ul class="menu">
             <li id="not-current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -20,6 +21,16 @@
             <li id="current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
           </ul>
+          </div>
+          <div class="small-screen-menu">
+          <ul class="menu">
+            <li id="not-current-page"><a href="index.html">Home</a></li>
+            <li id="not-current-page"><a href="about.html">About</a></li>
+            <li><a href="index.html"><img src="images/logos/command only.svg" alt="Export logo" id="mobile-logo"></a></li>
+            <li id="current-page"><a href="location.html">Location</a></li>
+            <li id="not-current-page"><a href="process.html">Process</a></li>
+          </ul>
+          </div>
         </nav>
       </div>
     </header>
