--- a/bios.html
+++ b/bios.html
@@ -13,11 +13,8 @@
 
     <header>
       <div class="navigation-top">
-
-        <!-- Animated old logo
-        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
-        -->
         <nav>
+          <div class="large-screen-menu">
           <ul class="menu">
             <li id="not-current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
@@ -25,6 +22,16 @@
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
           </ul>
+          </div>
+          <div class="small-screen-menu">
+          <ul class="menu">
+            <li id="not-current-page"><a href="index.html">Home</a></li>
+            <li id="not-current-page"><a href="about.html">About</a></li>
+            <li><a href="index.html"><img src="images/logos/command only.svg" alt="Export logo" id="mobile-logo"></a></li>
+            <li id="not-current-page"><a href="location.html">Location</a></li>
+            <li id="not-current-page"><a href="process.html">Process</a></li>
+          </ul>
+          </div>
         </nav>
       </div>
     </header>
