--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
 
     <header id="top-of-page">
       <div class="navigation-top">
-        <!--left corner sticky command only logo
-        <a href="index.html#top-of-page"><img src="images/logos/command only.svg" alt="Export logo" class="sticky-command"></a>
-        <a href="index.html"><img src="images/logos/e only.svg" alt="Export logo"></a>
-        -->
-        <!--Full logo
-        <a href="index.html"><img src="images/logos/command e logo lockup.svg" alt="Export logo"></a>
-        -->
-        <!-- Animated old logo
-        <a href="index.html" id="command-hover"><i id="export-logo"></i></a>
-        -->
         <nav>
           <div class="large-screen-menu">
           <ul class="menu">
@@ -39,7 +29,7 @@
           <ul class="menu">
             <li id="current-page"><a href="index.html">Home</a></li>
             <li id="not-current-page"><a href="about.html">About</a></li>
-            <li><a href="index.html"><img src="images/logos/command only.svg" alt="Export logo"></a></li>
+            <li><a href="index.html"><img src="images/logos/command only.svg" alt="Export logo" id="mobile-logo"></a></li>
             <li id="not-current-page"><a href="location.html">Location</a></li>
             <li id="not-current-page"><a href="process.html">Process</a></li>
           </ul>
