additional color changes, testing duotone photos

--- a/index.html
+++ b/index.html
@@ -50,141 +50,141 @@
         <div class="student-grid">
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
-            <a href="bios.html"><div class="overlay">Student name</div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897.JPG" alt="student name">
+            <img src="images/IMG_2897 black green.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay">Student name</div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/IMG_2897 green white.jpg" alt="student name">
             <a href="bios.html"><div class="overlay">Student name</div></a>
           </div>
 
