custom cursor test

--- a/bios.html
+++ b/bios.html
@@ -48,9 +48,9 @@
             <h1 class="no-top-padding bold-h1">Jordan Stewart</h1>
             <h1 class="no-top-padding">Professional Facts</h1>
             <ul>
-              <li>Fact:</li>
-              <li>Fact:</li>
-              <li>Fact:</li>
+              <li><a href="exportbfa.com">exportbfa.com</a></li>
+              <li><a href="mailto:export@bfa.com">export@bfa.com</a></li>
+              <li>Instagram</li>
             </ul>
             <h1 class="no-top-padding">Personal Facts</h1>
             <ul>
