--- a/index.html
+++ b/index.html
@@ -193,9 +193,12 @@
     </main>
 
 
-
     <footer>
-
+      <ul>
+        <li>Instagram</li>
+        <li>Facebook</li>
+        <li>Twitter</li>
+      </ul>
     </footer>
 
 
