--- a/location.html
+++ b/location.html
@@ -34,6 +34,32 @@
         </nav>
       </div>
     </header>
+
+  <main>
+    <h2>Getting Here</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    </div>
+
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.2829680868676!2d-81.34618258485618!3d41.150176418630124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8831252c729f95a3%3A0xfb097c5ad4eb0dea!2sTaylor+Hall%2C+Kent%2C+OH+44243!5e0!3m2!1sen!2sus!4v1550547686343" width="1000" height="400" frameborder="0" align="middle" style="border:0" allowfullscreen></iframe>
+
+
+
+    <div class="text-column">
+    <ul>
+      <lh>Address</lh>
+      <li>Taylor Hall</li>
+      <li>300 Midway Dr</li>
+      <li>Kent, Ohio 44242</li>
+    </ul>
+
+    <h2>The Gallery</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    </div>
+  </main>
   </body>
 
   <footer>
