--- a/maptest.html
+++ b/maptest.html
@@ -14,7 +14,6 @@
     #map { position:inherit; top:0; bottom:0; width:100%; height:500px;}
     </style>
 
-
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
   </head>
@@ -47,26 +46,48 @@
   <main>
     <h2>Getting Here</h2>
 
-    <p>The BFA show will be located in the Taylor Hall Gallery at Kent State University. Taylor hall is located at <strong>300 Midway Dr, Kent, Ohio 44243</strong>. Visitors can park in [PARKING INFO HERE].
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </p>
     </div>
 
-    <div class="map-container">
-        <div id='map'></div>
-        <script>
-        mapboxgl.accessToken = 'pk.eyJ1IjoianN0ZXdhNjEiLCJhIjoiY2phMDdwc3J1OHpzazJ3czRja2p6MGFrMSJ9.vIykCxDUjBAZyWyQgwdUUw';
-        const map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/jstewa61/cjsnch0y92c4i1fo4e51oig4o',
-        center: [-81.343740, 41.150191],
-        zoom: 17.0
-        });
-        </script>
-    </div>
+<div class="map-comtainer">
+    <div id='map'></div>
+    <script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoianN0ZXdhNjEiLCJhIjoiY2phMDdwc3J1OHpzazJ3czRja2p6MGFrMSJ9.vIykCxDUjBAZyWyQgwdUUw';
+    const map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/jstewa61/cjsnch0y92c4i1fo4e51oig4o',
+    center: [-81.343740, 41.150191],
+    zoom: 17.0
+    });
+
+    var geojson = {
+      type: 'FeatureCollection',
+      features: [{
+        type: 'Feature',
+        geometry: {
+          type: 'Point',
+          coordinates: [-81.343740, 41.150191]
+        },
+        properties: {
+          title: 'Mapbox',
+          description: 'Taylor Hall'
+        }
+    }]
+  };
+    </script>
+</div>
+
 
 
 
     <div class="text-column">
+    <ul>
+      <lh>Address</lh>
+      <li>Taylor Hall</li>
+      <li>300 Midway Dr</li>
+      <li>Kent, Ohio 44242</li>
+    </ul>
 
     <h2>The Gallery</h2>
 
