more breakpoints for paragraphs, map edits

--- a/about.html
+++ b/about.html
@@ -37,16 +37,26 @@
 <body>
 <main>
 
-<div class="text-column">
+
   <h1>About the Show</h1>
 
-  <p>Kent State VCD class of 2019’s Bachelor of Fine Arts Show is Export. The past four years (give or take for some of us) have provided many experiences to learn and grow. Now is the time to go into the professional world and take what we have learned and apply it, effectively — to export. Please join us at Taylor Hall’s second-floor gallery on April 5 at 5pm for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The gallery will be open in addition to the show [DATES]. For updates please follow us on Facebook, Instagram, or Twitter.
+  <p>Kent State VCD class of 2019’s Bachelor of Fine Arts Show is Export. The past four years (give or take for some of us) have provided many experiences to learn and grow. Now is the time to go into the professional world and take what we have learned and apply it, effectively — to export.
+  <br>
+  <br>
+  Please join us at Taylor Hall’s second-floor gallery on April 5 at 5pm for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The gallery will be open in addition to the show [DATES]. For updates please follow us on Facebook, Instagram, or Twitter.
   </p>
 
 
 </main>
 </body>
 
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <footer>
   </footer>
 
