Formatting about and location pages, starting to incorporate social media icons in footer

--- a/about.html
+++ b/about.html
@@ -39,12 +39,12 @@
 
 
   <h1>About the Show</h1>
-
-  <p>Kent State VCD class of 2019’s Bachelor of Fine Arts Show is Export. The past four years (give or take for some of us) have provided many experiences to learn and grow. Now is the time to go into the professional world and take what we have learned and apply it, effectively — to export.
-  <br>
-  <br>
-  Please join us at Taylor Hall’s second-floor gallery on April 5 at 5pm for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The gallery will be open in addition to the show [DATES]. For updates please follow us on Facebook, Instagram, or Twitter.
-  </p>
+  <div class="text-column">
+    <p>Kent State VCD's Class of 2019 Bachelor of Fine Arts Show is <b>⌘Export</b>. The past four years (give or take for some of us) have provided us with many experiences to learn and grow. Now is the time to go into the professional world and take what we have learned and apply it, effectively — to export.
+    <br><br>
+    Please join us at Taylor Hall’s second-floor gallery on <b>April 5 at 5pm</b> for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The show will be open though April 11. For updates please follow us on <a href="https://www.facebook.com/VCDKent/" class="green-link"><b>Facebook</b></a>, <a href="https://www.instagram.com/vcdkentstate/" class="green-link"><b>Instagram</b></a>, or <a href="https://twitter.com/vcdkentstate" class="green-link"><b>Twitter</b></a>.
+    </p>
+  </div>
 
 
 </main>
