--- a/location.html
+++ b/location.html
@@ -45,10 +45,12 @@
     </header>
 
   <main>
-    <h2>Getting Here</h2>
+    <h1>Getting Here</h1>
 
-    <p>The BFA show will be located in the Taylor Hall Gallery at Kent State University. Taylor Hall is located at <strong>300 Midway Dr, Kent, Ohio 44243</strong>. Visitors can park in [PARKING INFO HERE].
-    </p>
+    <div class="text-column">
+      <p>The BFA show will be located in the Taylor Hall Gallery at Kent State University. Taylor Hall is located at <strong>300 Midway Dr, Kent, Ohio 44243</strong>. Visitors can park in [PARKING INFO HERE].
+      </p>
+    </div>
 
 
     <div class="map-container">
@@ -109,9 +111,10 @@
 
 
     <h2>The Gallery</h2>
-
-    <p>The Taylor Hall Gallery is located on the second floor of Taylor Hall. The second floor is acccessable through the steps on the exterior of the building or through the first floor entrances. Guests with limited mobility may use the elevator located in the first floor entrance near the May 4 Museum.
-    </p>
+    <div class="text-column">
+      <p>The Taylor Hall Gallery is located on the second floor of Taylor Hall. The second floor is acccessable through the steps on the exterior of the building or through the first floor entrances. Guests with limited mobility may use the elevator located in the first floor entrance near the May 4 Museum.
+      </p>
+    </div>
 
   </main>
   </body>
