--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -194,19 +195,17 @@
 
 
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <footer>
-      <ul>
-        <li>Instagram</li>
-        <li>Facebook</li>
-        <li>Twitter</li>
-      </ul>
-    </footer>
+      <div id="footer-middle">
+  <!-- font awesome icons -->
+        <ul class="footer-social-media">
+          <li><a href="https://www.facebook.com/VCDKent/" target="_blank" class="fa fa-facebook"></a></li>
+          <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
+          <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
+        </ul>
+      </div>
+</footer>
 
 
 
