--- a/index.html
+++ b/index.html
@@ -197,15 +197,16 @@
 
 
     <footer>
-      <div id="footer-middle">
+      <div>
   <!-- font awesome icons -->
         <ul class="footer-social-media">
           <li><a href="https://www.facebook.com/VCDKent/" target="_blank" class="fa fa-facebook"></a></li>
           <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
           <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
         </ul>
+        <a href="index.html#top-of-page"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
       </div>
-</footer>
+    </footer>
 
 
 
