--- a/process.html
+++ b/process.html
@@ -8,6 +8,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgm7wqm.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <header>
@@ -44,6 +46,15 @@
   <br>
   <br>
   <footer>
+    <div>
+<!-- font awesome icons -->
+      <ul class="footer-social-media">
+        <li><a href="https://www.facebook.com/VCDKent/" target="_blank" class="fa fa-facebook"></a></li>
+        <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
+        <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
+      </ul>
+      <a href="index.html#top-of-page"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
+    </div>
   </footer>
 
   <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
