adding gallery image and favicon testing

--- a/location.html
+++ b/location.html
@@ -112,10 +112,11 @@
     </div>
 
 
-    <h2>The Gallery</h2>
+    <h2>Taylor Hall Gallery</h2>
     <div class="text-column">
       <p>The Taylor Hall Gallery is located on the second floor of Taylor Hall. The second floor is acccessable through the steps on the exterior of the building or through the first floor entrances. Guests with limited mobility may use the elevator located in the first floor entrance near the May 4 Museum.
       </p>
+      <img src='images/gallery/4N4A2790.jpg' class="margin-top-50"></img>
     </div>
 
   </main>
