Formatting bios for Q&A

--- a/process.html
+++ b/process.html
@@ -62,7 +62,7 @@
         <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
         <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
       </ul>
-      <a href="index.html#top-of-page"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
+      <a href="index.html"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
     </div>
   </footer>
 
