--- a/bios.html
+++ b/bios.html
@@ -57,17 +57,36 @@
 
           <div class="sidebyside">
             <h1 class="no-top-padding bold-h1">Jordan Stewart</h1>
-            <h1 class="no-top-padding">Professional Facts</h1>
+
+            <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li><a href="exportbfa.com">exportbfa.com</a></li>
-              <li><a href="mailto:export@bfa.com">export@bfa.com</a></li>
-              <li>Instagram</li>
+              <li>Typography</li>
             </ul>
-            <h1 class="no-top-padding">Personal Facts</h1>
+
+            <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li>Fact:</li>
-              <li>Fact:</li>
-              <li>Fact:</li>
+              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
+              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
+              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+            </ul>
+
+            <h1 class="no-top-padding">About Me</h1>
+            <ul>
+              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
+              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+
+              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+
+              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+
+              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+
+              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+
+              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+
+              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
             </ul>
 
           </div>
@@ -83,7 +102,7 @@
           <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
           <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
         </ul>
-        <a href="index.html#top-of-page"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
+        <a href="index.html"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
       </div>
     </footer>
 
