--- a/index.html
+++ b/index.html
@@ -62,142 +62,137 @@
         <div class="student-grid">
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
+            <img src="images/students/Alexander Embleton.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Alexander Embleton</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Amrita Datta.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Amrita Datta</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Anne West.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Anne West</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Austin Reitz.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Austin Reitz</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Betsy Garwood.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Betsy Garwood</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Brian Tran.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Brian Tran</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Brianna Leatherman.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Brianna Leatherman</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Carmen Dotterer.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Carmen Dotterer</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Elizabeth Ober.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Elizabeth Ober</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Emilee Mapes.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Emilee Mapes</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Emily Gommel.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Emily Gommel</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Freesia Yoon.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Freesia Yoon</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Gabrielle Shirk.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Gabrielle Shirk</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Hanna Kotlarek.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Hanna Kotlarek</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Hannah Wright.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Hannah Wright</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/John Haller.jpg.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>John Haller</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Jordan Stephens.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Jordan Stephens</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="images/students/Jordan Stewart.jpg" alt="student name">
             <a href="bios.html"><div class="overlay"><span>Jordan Stewart</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student Name</span></div></a>
+            <img src="images/students/Joshua Sauder.jpg.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Joshua Sauder</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Kaitlin Stanaitis.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Kaitlin Stanaitis</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Mackenzie Gerl.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Mackenzie Gerl</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Madeleine Kidd.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Madeleine Kidd</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Olivia Shock.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Olivia Shock</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Savannah Sabistina.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Savannah Sabistina</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Shannon Kovach.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Shannon Kovach</span></div></a>
+          </div>
+          <div class="grid-item">
+            <img src="images/students/Vanessa Allen.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Vanessa Allen</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
-          </div>
-
-          <div class="grid-item">
-            <img src="images/IMG_2897 black green.jpg" alt="student name">
-            <a href="bios.html"><div class="overlay"><span>Student name</span></div></a>
+            <img src="images/students/Yuanqing Wang.jpg" alt="student name">
+            <a href="bios.html"><div class="overlay"><span>Yuanqing Wang</span></div></a>
           </div>
 
         </div>
